# TStracker

./: .gitignore  README.md
HuanGUI/Testing_Utilities/Test_Mat/: TestMat.cpp  cmake_install.cmake
HuanGUI/Testing_Utilities/Test_OpenCV/: CMakeCache.txt
HuanGUI/lib/BigTiff/Linux/: Readme.md  makefile
HuanGUI/lib/BigTiff/Windows/: libtiff.sln  makefile  tiffinfo.vcxproj
HuanGUI/lib/OpenCVLib4Windows/OpenCV_DLL/: Readme.md
HuanGUI/lib/OpenCV_DLL/: install.bat
HuanGUI/lib/OpenCV_DLL/DebugUseDLL/: install.bat
HuanGUI/lib/OpenCV_DLL/ReleaseUseDll/: uninstall.bat
HuanGUI/src/BasicGUITimestamp/: CMakeCache.txt  cmake_install.cmake  main.cpp
HuanGUI/src/GUISaveVideoWithTimestamp/: CMakeLists.txt  GUISaveVideoWithTimestamp  cmake_install.cmake  main.cpp
HuanGUI/src/Linux/GUISaveVideoWithTimestamp/: CMakeCache.txt
HuanGUI/src/Linux/Testing_Utilities/ImagePtr2CVMat/: Makefile  cmake_install.cmake
HuanGUI/src/Testing_Utilities/ImagePtr2CVMat/: .CMakeLists.txt.swp  CMakeCache.txt  CMakeLists.txt  ImagePtr2CVMat  MakefileOld  main.cpp
HuanGUI/src/Testing_Utilities/ImagePtr2CVMat/ImageSize/: ImageSize  Makefile  main.cpp
HuanGUI/src/Testing_Utilities/OpenCV/Test_Mat/: CMakeCache.txt  TestMat
HuanGUI/src/Testing_Utilities/OpenCV/Test_OpenCV/: DisplayImage  DisplayImage.cpp
HuanGUI/src/Testing_Utilities/OpenCV/Test_Video_Writer/: cmake_install.cmake  main.cpp
HuanGUI/src/Testing_Utilities/SpinView/: newProj.sh
HuanGUI/src/Testing_Utilities/SpinView/AcquisitionTest/: Acquisition  Makefile
HuanGUI/src/Testing_Utilities/SpinView/ImageSize/: main.cpp
HuanGUI/src/Testing_Utilities/SpinView/ImageTimestamp/: ImageTimestamp  main.cpp
HuanGUI/src/Testing_Utilities/SpinView/SampleProj/: Makefile
HuanGUI/src/Windows/: WindowsWorkspace.code-workspace
HuanGUI/src/Windows/BasicGUITimestamp/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  BasicGUITimeStamp.sln  BasicGUITimeStamp.vcxproj.filters  CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  Makefile  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  main.cpp
HuanGUI/src/Windows/BasicGUITimestamp/BasicGUITimeStamp.dir/Debug/BasicGUI.25B91CE0.tlog/: BasicGUITimeStamp.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  custombuild.write.1.tlog
HuanGUI/src/Windows/BasicGUITimestamp/Win32/Debug/ALL_BUILD/ALL_BUILD.tlog/: custombuild.read.1.tlog
HuanGUI/src/Windows/BasicGUITimestamp/Win32/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: custombuild.read.1.tlog
HuanGUI/src/Windows/BasicGUITimestamp/x64/Debug/: BasicGUITimeStamp.ilk
HuanGUI/src/Windows/BasicGUITimestamp/x64/Debug/BasicGUI.25B91CE0.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  custombuild.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
HuanGUI/src/Windows/BasicGUITimestamp/x64/Debug/INSTALL/INSTALL.tlog/: INSTALL.lastbuildstate  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
HuanGUI/src/Windows/BasicGUITimestamp/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: custombuild.command.1.tlog  custombuild.write.1.tlog
HuanGUI/src/Windows/GUISaveVideoWithTimestamp/: GUISaveVideoWithTimestamp.vcxproj.filters  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
HuanGUI/src/Windows/OpenCV/Test_Mat/: ALL_BUILD.vcxproj  CMakeCache.txt  TestMat.cpp  TestMat.vcxproj  ZERO_CHECK.vcxproj
HuanGUI/src/Windows/OpenCV/Test_OpenCV/: ALL_BUILD.vcxproj  DisplayImage.sln  DisplayImage.vcxproj
HuanGUI/src/Windows/OpenCV/Test_OpenCV_QtGUI/: CMakeCache.txt  OpenCV_QT_GUI.sln  VideoWriter  VideoWriter.sln  VideoWriter.vcxproj  VideoWriter.vcxproj.filters  ZERO_CHECK.vcxproj.filters
HuanGUI/src/Windows/OpenCV/Test_Video_Writer/: ALL_BUILD.vcxproj  CMakeCache.txt  (+2 more)
HuanGUI/src/Windows/OpenCV_DLL/: uninstall.bat
HuanGUI/src/Windows/SpinSimpleGUI_MFC/: MainFrm.cpp  SpinSimpleGUI_MFC.rc  SpinSimpleGUI_MFC_vs2015.vcxproj  SpinnakerMFC.cpp  SpinnakerMFCDoc.cpp
HuanGUI/src/Windows/TStracker/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  ImageInfo.cpp  ImageInfo.h  ImageSaver.cpp  ImageSaver.h  InputDialog.h  Readme.md  Readme.md.txt  Resource.rc  TStracker.cpp  TStracker.h  TStracker.sln  TStracker.vcxproj  TStracker.vcxproj.filters  TStrackerMFC.cpp  TStrackerMFC.h  TStrackerThread.cpp  TStrackerThread.h  TiffWriter.cpp  TiffWriter.h  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  cvui.h  main.cpp  resource.h  resource1.h  stdafx.h
HuanGUI/src/Windows/TStracker/PythonUtilities/: pyTiffCombine.py
HuanGUI/src/Windows/TStracker/rc/: TStracker.rc  resource.h
doc/: TStrackerV2.0.drawio
src/: CMakeCache.txt
src/DevelopmentSuite/src/Linux/BasicGUITimestamp/: CMakeLists.txt  main.cpp
src/DevelopmentSuite/src/Windows/OpenCV/Test_OpenCV_QtGUI/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  Makefile  OpenCV_QT_GUI.vcxproj  OpenCV_QT_GUI.vcxproj.filters  ZERO_CHECK.vcxproj  cmake_install.cmake  main.cpp
src/PythonUtilities/: .test.txt.swp  PyTiffMetaDumper.py  PyTiffMissFrameAnalyzer.py  pyTiffTimestampExtractor.py  pyTiffTrialSeparator.py  test.txt
src/TStracker/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeCache_before_reorginize.txt  CMakeLists.txt  CVDisplay.cpp  CVDisplay.h  CamRecorder.cpp  CamRecorder.h  INSTALL.vcxproj  INSTALL.vcxproj.filters  ImageAcquirer.cpp  ImageAcquirer.h  ImageDistributor.cpp  ImageDistributor.h  ImageInfo.cpp  ImageInfo.h  ImageMiner.cpp  ImageMiner.h  ImageSaver.cpp  ImageSaver.h  ImageSaverTSQ.cpp  ImageSaverTSQ.h  InputDialog.cpp  InputDialog.h  Readme.md  RunOperator.cpp  RunOperator.h  TSImage.cpp  TSImage.h  TSRecordingSetting.cpp  TSRecordingSetting.h  TSSettingDialog.cpp  TSSettingDialog.h  TSconfig.txt  TStracker.cpp  TStracker.h  TStracker.sln  TStracker.vcxproj  TStracker.vcxproj.filters  (+18 more)
src/TStracker/enc_temp_folder/37f765cf4db665bf4c7997763b9eb/: ImageSaverTSQ.cpp
src/TStracker/enc_temp_folder/c4b6d1add71c44349eed958efb35e14e/: ImageMiner.cpp
src/TStracker/rc/: TStracker.rc  resource.h
(+109 files in other folders)
